<resources>
    <string name="app_name">FTP Server</string>
    <string name="start_btn">Start Server</string>
    <string name="stop_btn">Stop server</string>

    <string name="permission">The app requires storage permission to access files for the FTP server</string>

    <string name="permission_denied">You have denied storage permission. Grant the permission to continue.</string>
    <string name="wifi_status">Wifi Status :</string>
    <string name="ip_address">Ip address :</string>
    <string name="network_type">Network Type :</string>
    <string name="running">RUNNING</string>
    <string name="or">or</string>
</resources>
