<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:cardCornerRadius="10dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/wifi_status"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/wifiStatus"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/ip_address"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/ipAddress"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/network_type"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/networkType"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center">
                <Button
                    android:id="@+id/startBtn"
                    android:onClick="btnClick"
                    android:layout_span="2"
                    android:text="@string/start_btn" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>

    <TableLayout
        android:id="@+id/display"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/running"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:id="@+id/qrCode"
                android:layout_width="200dp"
                android:layout_height="200dp"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>